added picker for addaccommodation

--- a/Festival-App/Festival-App/Platform/Storyboards/Accomodation.storyboard
+++ b/Festival-App/Festival-App/Platform/Storyboards/Accomodation.storyboard
@@ -315,21 +315,29 @@
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="euZ-Mb-n3k">
                                                         <rect key="frame" x="15" y="521.5" width="345" height="165"/>
                                                         <subviews>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addImage" translatesAutoresizingMaskIntoConstraints="NO" id="nhT-Do-g0W">
+                                                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9qO-Aj-HpX">
                                                                 <rect key="frame" x="0.0" y="0.0" width="165" height="165"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="width" secondItem="nhT-Do-g0W" secondAttribute="height" multiplier="1:1" id="3zv-LU-kdd"/>
+                                                                    <constraint firstAttribute="width" secondItem="9qO-Aj-HpX" secondAttribute="height" multiplier="1:1" id="fUH-Tg-Acy"/>
                                                                 </constraints>
-                                                            </imageView>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addImage" translatesAutoresizingMaskIntoConstraints="NO" id="dZb-gy-maT">
+                                                                <state key="normal" image="addImage"/>
+                                                                <connections>
+                                                                    <action selector="onImageButtonTapped:" destination="F6P-0a-Bzc" eventType="touchUpInside" id="GPf-dW-9hw"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hre-qm-x5E">
                                                                 <rect key="frame" x="180" y="0.0" width="165" height="165"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="width" secondItem="dZb-gy-maT" secondAttribute="height" multiplier="1:1" id="Nin-Hy-DLJ"/>
+                                                                    <constraint firstAttribute="width" secondItem="hre-qm-x5E" secondAttribute="height" multiplier="1:1" id="WEn-7S-hUB"/>
                                                                 </constraints>
-                                                            </imageView>
+                                                                <state key="normal" image="addImage"/>
+                                                                <connections>
+                                                                    <action selector="onImageButtonTapped:" destination="F6P-0a-Bzc" eventType="touchUpInside" id="PFM-cg-UTW"/>
+                                                                </connections>
+                                                            </button>
                                                         </subviews>
                                                         <constraints>
-                                                            <constraint firstItem="dZb-gy-maT" firstAttribute="width" secondItem="dZb-gy-maT" secondAttribute="height" multiplier="1:1" id="Qk3-bQ-BQG"/>
+                                                            <constraint firstItem="hre-qm-x5E" firstAttribute="width" secondItem="hre-qm-x5E" secondAttribute="height" multiplier="1:1" id="DX7-7k-cMl"/>
                                                         </constraints>
                                                     </stackView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Images" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5QU-dU-2rQ">
@@ -341,25 +349,35 @@
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="VCq-FB-xLc">
                                                         <rect key="frame" x="15" y="701.5" width="345" height="165"/>
                                                         <subviews>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addImage" translatesAutoresizingMaskIntoConstraints="NO" id="hTq-jY-hFl">
+                                                            <button opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lXv-X4-qFk">
                                                                 <rect key="frame" x="0.0" y="0.0" width="165" height="165"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="width" secondItem="hTq-jY-hFl" secondAttribute="height" multiplier="1:1" id="ORm-I0-2Wx"/>
+                                                                    <constraint firstAttribute="width" secondItem="lXv-X4-qFk" secondAttribute="height" multiplier="1:1" id="KMI-XF-8dA"/>
                                                                 </constraints>
-                                                            </imageView>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addImage" translatesAutoresizingMaskIntoConstraints="NO" id="ohk-JG-THS">
+                                                                <state key="normal" image="addImage"/>
+                                                                <connections>
+                                                                    <action selector="onImageButtonTapped:" destination="F6P-0a-Bzc" eventType="touchUpInside" id="t93-Ws-8nP"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" clipsSubviews="YES" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wWd-lo-QWx">
                                                                 <rect key="frame" x="180" y="0.0" width="165" height="165"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="width" secondItem="ohk-JG-THS" secondAttribute="height" multiplier="1:1" id="gcD-5D-YXn"/>
+                                                                    <constraint firstAttribute="width" secondItem="wWd-lo-QWx" secondAttribute="height" multiplier="1:1" id="uh8-V2-I6P"/>
                                                                 </constraints>
-                                                            </imageView>
+                                                                <state key="normal" image="addImage"/>
+                                                                <connections>
+                                                                    <action selector="onImageButtonTapped:" destination="F6P-0a-Bzc" eventType="touchUpInside" id="trW-QN-q3j"/>
+                                                                </connections>
+                                                            </button>
                                                         </subviews>
                                                         <constraints>
-                                                            <constraint firstItem="ohk-JG-THS" firstAttribute="width" secondItem="ohk-JG-THS" secondAttribute="height" multiplier="1:1" id="lg3-uI-X7i"/>
+                                                            <constraint firstItem="wWd-lo-QWx" firstAttribute="width" secondItem="wWd-lo-QWx" secondAttribute="height" multiplier="1:1" id="UdK-4X-hBY"/>
+                                                            <constraint firstItem="lXv-X4-qFk" firstAttribute="width" secondItem="lXv-X4-qFk" secondAttribute="height" multiplier="1:1" id="VjX-uv-Yn6"/>
+                                                            <constraint firstItem="wWd-lo-QWx" firstAttribute="width" secondItem="wWd-lo-QWx" secondAttribute="height" multiplier="1:1" id="pUm-3J-R5e"/>
                                                         </constraints>
                                                     </stackView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YuA-ym-eOf" customClass="RoundedButton" customModule="Festival_App" customModuleProvider="target">
-                                                        <rect key="frame" x="15" y="896.5" width="345" height="50"/>
+                                                        <rect key="frame" x="65" y="896.5" width="245" height="50"/>
                                                         <color key="backgroundColor" red="0.23921568627450979" green="0.086274509803921567" blue="0.40784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="Hz4-y9-SK0"/>
@@ -392,7 +410,7 @@
                                                     <constraint firstItem="5QU-dU-2rQ" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="9Y8-5Q-vs0"/>
                                                     <constraint firstItem="jTZ-CT-4DJ" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="AA0-b9-Wbb"/>
                                                     <constraint firstAttribute="trailing" secondItem="lRO-GV-B6n" secondAttribute="trailing" constant="15" id="AjD-GC-f8M"/>
-                                                    <constraint firstItem="YuA-ym-eOf" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="H0b-et-eEA"/>
+                                                    <constraint firstItem="YuA-ym-eOf" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="65" id="H0b-et-eEA"/>
                                                     <constraint firstItem="TBs-qa-tYl" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="IJR-fl-3XA"/>
                                                     <constraint firstItem="TiA-Kg-jcv" firstAttribute="top" secondItem="HCX-p3-ioF" secondAttribute="bottom" constant="9.5" id="Iga-QE-FxD"/>
                                                     <constraint firstAttribute="trailing" secondItem="hEM-fq-Kns" secondAttribute="trailing" id="JU8-3Y-KaV"/>
@@ -401,7 +419,7 @@
                                                     <constraint firstItem="qLa-FB-c1C" firstAttribute="top" secondItem="jTZ-CT-4DJ" secondAttribute="bottom" constant="9.5" id="LTk-KU-GLz"/>
                                                     <constraint firstItem="5QU-dU-2rQ" firstAttribute="top" secondItem="qLa-FB-c1C" secondAttribute="bottom" constant="19" id="Mb8-QM-7dq"/>
                                                     <constraint firstItem="HCX-p3-ioF" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="RJJ-VH-1Wo"/>
-                                                    <constraint firstAttribute="trailing" secondItem="YuA-ym-eOf" secondAttribute="trailing" constant="15" id="SCu-KG-sVI"/>
+                                                    <constraint firstAttribute="trailing" secondItem="YuA-ym-eOf" secondAttribute="trailing" constant="65" id="SCu-KG-sVI"/>
                                                     <constraint firstItem="RK7-MV-xsh" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="Z5t-Ya-Gk8"/>
                                                     <constraint firstAttribute="trailing" secondItem="HCX-p3-ioF" secondAttribute="trailing" constant="15" id="aev-ma-GUG"/>
                                                     <constraint firstItem="RK7-MV-xsh" firstAttribute="top" secondItem="TiA-Kg-jcv" secondAttribute="bottom" constant="19.5" id="eAp-6g-QoW"/>
@@ -479,6 +497,8 @@
                         <outlet property="addressTextField" destination="TiA-Kg-jcv" id="hlQ-wU-E1H"/>
                         <outlet property="descriptionTextView" destination="lRO-GV-B6n" id="6a2-ng-YZW"/>
                         <outlet property="descriptionTextViewHeightConstraint" destination="TUf-FH-n5Y" id="UQo-7j-K7X"/>
+                        <outlet property="firstButton" destination="9qO-Aj-HpX" id="EPB-op-Mkn"/>
+                        <outlet property="fourthButton" destination="wWd-lo-QWx" id="h8c-D3-24D"/>
                         <outlet property="mapErrorLabel" destination="zGh-Vd-6tB" id="vYj-Bv-ERn"/>
                         <outlet property="mapView" destination="hEM-fq-Kns" id="aEN-le-4iZ"/>
                         <outlet property="mapViewHeightConstraint" destination="efM-qI-eOc" id="zhq-GY-MlR"/>
@@ -486,6 +506,8 @@
                         <outlet property="offerTitleTopConstraint" destination="6Qt-Gi-5MG" id="3NV-d7-ldV"/>
                         <outlet property="priceTextField" destination="qLa-FB-c1C" id="eWK-59-WT4"/>
                         <outlet property="scrollView" destination="2eb-xN-Zir" id="1ay-3K-sgb"/>
+                        <outlet property="secondButton" destination="hre-qm-x5E" id="7K9-fj-VpJ"/>
+                        <outlet property="thirdButton" destination="lXv-X4-qFk" id="pG5-yz-Eax"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zgn-9o-XlO" userLabel="First Responder" sceneMemberID="firstResponder"/>
