--- a/Festival-App/Festival-App/Platform/Storyboards/Accomodation.storyboard
+++ b/Festival-App/Festival-App/Platform/Storyboards/Accomodation.storyboard
@@ -222,7 +222,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="973"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oso-Fa-xb8">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="973"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="1055.5"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qLa-FB-c1C">
                                                         <rect key="frame" x="15" y="440" width="345" height="36.5"/>
@@ -288,6 +288,12 @@
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0H-os-DM1">
+                                                        <rect key="frame" x="15" y="496" width="345" height="16.5"/>
+                                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TBs-qa-tYl">
                                                         <rect key="frame" x="15" y="195" width="345" height="36.5"/>
                                                         <constraints>
@@ -313,7 +319,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="euZ-Mb-n3k">
-                                                        <rect key="frame" x="15" y="521.5" width="345" height="165"/>
+                                                        <rect key="frame" x="15" y="604" width="345" height="165"/>
                                                         <subviews>
                                                             <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9qO-Aj-HpX">
                                                                 <rect key="frame" x="0.0" y="0.0" width="165" height="165"/>
@@ -341,13 +347,13 @@
                                                         </constraints>
                                                     </stackView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Images" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5QU-dU-2rQ">
-                                                        <rect key="frame" x="15" y="495.5" width="345" height="16.5"/>
+                                                        <rect key="frame" x="15" y="578" width="345" height="16.5"/>
                                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="VCq-FB-xLc">
-                                                        <rect key="frame" x="15" y="701.5" width="345" height="165"/>
+                                                        <rect key="frame" x="15" y="784" width="345" height="165"/>
                                                         <subviews>
                                                             <button opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lXv-X4-qFk">
                                                                 <rect key="frame" x="0.0" y="0.0" width="165" height="165"/>
@@ -377,7 +383,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YuA-ym-eOf" customClass="RoundedButton" customModule="Festival_App" customModuleProvider="target">
-                                                        <rect key="frame" x="65" y="896.5" width="245" height="50"/>
+                                                        <rect key="frame" x="65" y="979" width="245" height="50"/>
                                                         <color key="backgroundColor" red="0.23921568627450979" green="0.086274509803921567" blue="0.40784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="Hz4-y9-SK0"/>
@@ -395,6 +401,18 @@
                                                             <action selector="onPostTapped:" destination="F6P-0a-Bzc" eventType="touchUpInside" id="37O-u8-h3P"/>
                                                         </connections>
                                                     </button>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VSh-iL-nfn">
+                                                        <rect key="frame" x="15" y="522" width="345" height="36.5"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="36.5" id="cft-Fb-842"/>
+                                                        </constraints>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="15"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="F6P-0a-Bzc" id="NgM-F3-a11"/>
+                                                        </connections>
+                                                    </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
@@ -402,6 +420,7 @@
                                                     <constraint firstItem="zGh-Vd-6tB" firstAttribute="top" secondItem="hEM-fq-Kns" secondAttribute="bottom" constant="19.5" id="12R-TY-Ycu"/>
                                                     <constraint firstAttribute="trailing" secondItem="RK7-MV-xsh" secondAttribute="trailing" constant="15" id="1Ax-N7-17X"/>
                                                     <constraint firstItem="lRO-GV-B6n" firstAttribute="top" secondItem="RK7-MV-xsh" secondAttribute="bottom" constant="9.5" id="2sy-Q5-Lz3"/>
+                                                    <constraint firstAttribute="trailing" secondItem="VSh-iL-nfn" secondAttribute="trailing" constant="15" id="3aJ-ey-WLh"/>
                                                     <constraint firstAttribute="trailing" secondItem="TiA-Kg-jcv" secondAttribute="trailing" constant="15" id="4LX-En-82f"/>
                                                     <constraint firstItem="jTZ-CT-4DJ" firstAttribute="top" secondItem="lRO-GV-B6n" secondAttribute="bottom" constant="19" id="4ib-pS-mwA"/>
                                                     <constraint firstItem="hEM-fq-Kns" firstAttribute="top" secondItem="oso-Fa-xb8" secondAttribute="top" id="4xP-cD-RuP"/>
@@ -410,18 +429,23 @@
                                                     <constraint firstItem="5QU-dU-2rQ" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="9Y8-5Q-vs0"/>
                                                     <constraint firstItem="jTZ-CT-4DJ" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="AA0-b9-Wbb"/>
                                                     <constraint firstAttribute="trailing" secondItem="lRO-GV-B6n" secondAttribute="trailing" constant="15" id="AjD-GC-f8M"/>
+                                                    <constraint firstItem="5QU-dU-2rQ" firstAttribute="top" secondItem="VSh-iL-nfn" secondAttribute="bottom" constant="19.5" id="E7t-6E-3cN"/>
+                                                    <constraint firstItem="VSh-iL-nfn" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="EHQ-vh-oYR"/>
                                                     <constraint firstItem="YuA-ym-eOf" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="65" id="H0b-et-eEA"/>
                                                     <constraint firstItem="TBs-qa-tYl" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="IJR-fl-3XA"/>
                                                     <constraint firstItem="TiA-Kg-jcv" firstAttribute="top" secondItem="HCX-p3-ioF" secondAttribute="bottom" constant="9.5" id="Iga-QE-FxD"/>
                                                     <constraint firstAttribute="trailing" secondItem="hEM-fq-Kns" secondAttribute="trailing" id="JU8-3Y-KaV"/>
                                                     <constraint firstItem="YuA-ym-eOf" firstAttribute="top" secondItem="VCq-FB-xLc" secondAttribute="bottom" constant="30" id="Jkz-gh-MHV"/>
                                                     <constraint firstItem="lRO-GV-B6n" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="JqF-Uh-6rH"/>
+                                                    <constraint firstItem="VSh-iL-nfn" firstAttribute="top" secondItem="P0H-os-DM1" secondAttribute="bottom" constant="9.5" id="KEv-gK-My7"/>
                                                     <constraint firstItem="qLa-FB-c1C" firstAttribute="top" secondItem="jTZ-CT-4DJ" secondAttribute="bottom" constant="9.5" id="LTk-KU-GLz"/>
-                                                    <constraint firstItem="5QU-dU-2rQ" firstAttribute="top" secondItem="qLa-FB-c1C" secondAttribute="bottom" constant="19" id="Mb8-QM-7dq"/>
+                                                    <constraint firstItem="P0H-os-DM1" firstAttribute="top" secondItem="qLa-FB-c1C" secondAttribute="bottom" constant="19.5" id="OtM-2d-r1H"/>
                                                     <constraint firstItem="HCX-p3-ioF" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="RJJ-VH-1Wo"/>
                                                     <constraint firstAttribute="trailing" secondItem="YuA-ym-eOf" secondAttribute="trailing" constant="65" id="SCu-KG-sVI"/>
+                                                    <constraint firstAttribute="trailing" secondItem="P0H-os-DM1" secondAttribute="trailing" constant="15" id="Uav-As-aaB"/>
                                                     <constraint firstItem="RK7-MV-xsh" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="Z5t-Ya-Gk8"/>
                                                     <constraint firstAttribute="trailing" secondItem="HCX-p3-ioF" secondAttribute="trailing" constant="15" id="aev-ma-GUG"/>
+                                                    <constraint firstItem="P0H-os-DM1" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="bIf-zy-78L"/>
                                                     <constraint firstItem="RK7-MV-xsh" firstAttribute="top" secondItem="TiA-Kg-jcv" secondAttribute="bottom" constant="19.5" id="eAp-6g-QoW"/>
                                                     <constraint firstItem="Ex2-Ul-nbN" firstAttribute="leading" secondItem="oso-Fa-xb8" secondAttribute="leading" constant="15" id="gGY-Ko-YS8"/>
                                                     <constraint firstItem="TBs-qa-tYl" firstAttribute="top" secondItem="Ex2-Ul-nbN" secondAttribute="bottom" constant="9.5" id="gkT-7G-PLW"/>
@@ -504,6 +528,7 @@
                         <outlet property="mapViewHeightConstraint" destination="efM-qI-eOc" id="zhq-GY-MlR"/>
                         <outlet property="offerTitleTextField" destination="TBs-qa-tYl" id="LGh-bn-BO6"/>
                         <outlet property="offerTitleTopConstraint" destination="6Qt-Gi-5MG" id="3NV-d7-ldV"/>
+                        <outlet property="phoneTextField" destination="VSh-iL-nfn" id="K3r-w1-dyC"/>
                         <outlet property="priceTextField" destination="qLa-FB-c1C" id="eWK-59-WT4"/>
                         <outlet property="scrollView" destination="2eb-xN-Zir" id="1ay-3K-sgb"/>
                         <outlet property="secondButton" destination="hre-qm-x5E" id="7K9-fj-VpJ"/>
